tests/validprograms/project/test_scope_2.tds
Program {
	void print(Int x) extern;
	
	void f(Int x) {
		Int x = 0;
		print(x);
	}
	
	void main() {
		f(1);
	}
}

