tests/invalidprograms/semantic/return_1.tds
Program {
	void main() {
		return 0;
	}
}

